--- a/ncrn_edd_companion_20230119.Rmd
+++ b/ncrn_edd_companion_20230119.Rmd
@@ -1,17 +1,140 @@
 ---
 title: "Biological Stream Survey EDD"
 output: html_document
-date: "`r Sys.Date()`"
+date: "`r format(Sys.Date(), '%b %d, %Y')`"
 ---
 
 ## Overview
 
 The file `ncrn_edd_biological_stream_surveys_cumulative.xlsx` is an Excel workbook (hereafter "workbook") containing the cumulative biological stream survey data (hereafter "dataset") collected by USNPS National Capital Region Network (NCRN) and affiliates. This markdown document explains the contents of the workbook, the data model used to arrange the dataset, and provides general guidelines for interpreting the dataset.
 
+This dataset synthesizes all available NCRN fish, water chemistry, and aquatic physical habitat inventory data into one file. Data are from five [sources](https://drive.google.com/drive/folders/1F7EeH3GUEGKzZ4YKU5wk7sfIj5sZpTqr?usp=share_link):  
+1. The NCRN [Biological Stream Survey (BSS) MS Access database](https://drive.google.com/file/d/1mk3eYkKNBLGjIvu647gKRX2YxEzMUQhN/view?usp=share_link). An entity relationship diagram of this database is available [here.](https://drive.google.com/file/d/1p2NOPA0MpxGPKWu-6KHlYDaRTtoNysei/view?usp=share_link)  
+2. [XLSX of Marc's 2021 fish data](https://docs.google.com/spreadsheets/d/1CPw71vxhbLndKQurK51PadPRo7TJKfsU/edit?usp=share_link&ouid=102040878521825586396&rtpof=true&sd=true)  
+3. [XLSX of Marc's 2022 fish data](https://docs.google.com/spreadsheets/d/19Zez54KijrKbl0eCMMONYfiev8vuWURs/edit?usp=share_link&ouid=102040878521825586396&rtpof=true&sd=true)  
+4. [XLSX of Marc's 2021 stream habitat data](https://docs.google.com/spreadsheets/d/1DVvlFQovu5hNwqQY1oMf-L-Fpmeqqy-k/edit?usp=share_link&ouid=102040878521825586396&rtpof=true&sd=true)  
+5. [XLSX of Marc's 2022 stream habitat data](https://docs.google.com/spreadsheets/d/1fggzrqPiRtz9toa23v65wCrjg1UB05HG/edit?usp=share_link&ouid=102040878521825586396&rtpof=true&sd=true)  
+
 ## Methods
 
-### Data model and metadata
+### Protocols
+The field protocol used to collect NCRN BSS data is [available here.](https://drive.google.com/file/d/1cSnwcwiZGdfzLWXmkKbuz0Z4sjtbW9QD/view?usp=share_link)
 
-Three types of data (1. `fish`, 2. `habitat`, and 3. `water chemistry`) data are presented in [electronic data deliverable (EDD) format](https://www.epa.gov/sites/default/files/2016-01/documents/r2comprehensivemanual_sept2015.pdf). The EDD contains three data views (`activities`, `results`, and `locations`).
+The `R` program that synthesizes the above data sources into one file is [available in this GitHub repo.](https://github.com/cwainright/20230103_iss56_fish) Clone the repo and run `buildEDD()` from `scripts/main.R` to reproduce the dataset.
 
-I tried to cross-reference to make categorical variables consistent among years and sampling methods. However, sometimes I didn't have a lookup table to rely on and there was no field integrity among data sources to facilitate cross-referencing. E.g., beware "Method_Speciation" column in 'habitat' `results`. I didn't have a way to cross-reference between Marc's 2021 and 2022 naming convention for all habitat metrics (e.g., 'ERODEXLT' versus 'Left_Bank_Erosion_Extent'). That means you'll need to do the cross-referencing to make sure you're aggregating all of the same metrics.
+```{r, echo=FALSE, warning=FALSE, message=FALSE, include=FALSE}
+rm(list=ls())
+
+#----- load external libraries
+library(data.table)
+library(tidyverse)
+library(dplyr)
+library(readxl)
+library(RODBC)
+library(openxlsx)
+library(gt)
+
+#----- load project functions
+source("scripts/edd/buildEDD.R")
+RODBC::odbcCloseAll() # close db connection
+db <- ("C:/Users/cwainright/OneDrive - DOI/Documents - NPS-NCRN-Biological Stream Sampling/General/Annual-Data-Packages/2022/NCRN_MBSS/NCRN_MBSS_be_2022.mdb")# https://doimspp.sharepoint.com/:u:/r/sites/NCRNBiologicalStreamSampling/Shared%20Documents/General/Annual-Data-Packages/2022/NCRN_MBSS/NCRN_MBSS_be_2022.mdb?csf=1&web=1&e=jjeJIg
+con <- RODBC::odbcConnectAccess2007(db) # open db connection
+buildEDD(connection = con, write = FALSE, addMarc = TRUE)
+```
+
+### Data model
+
+```{r, echo=FALSE}
+cols_na <- data.frame(col_name = colnames(EDD$Results),
+                      only_na = NA)
+for(i in 1:ncol(EDD$Results)){
+    cols_na$only_na[i] <- is.na(unique(EDD$Results[,i]))
+}
+cols_na <- cols_na %>% group_by(only_na) %>% summarize(n=n())
+```
+
+
+The dataset is provided in [electronic data deliverable (EDD) format](https://www.epa.gov/sites/default/files/2016-01/documents/r2comprehensivemanual_sept2015.pdf). The EDD contains three data views (`activities`, `results`, and `locations`). `results` are field observations like the count fishes captured in an electrofishing run, and lab results like total phosphorus concentration. `activities` and `locations` can be joined with `results` on `results.Activity_ID = activities.Activity_ID` and `activities.Location_ID = locations.Location_ID` to access supporting information about sampling instances and sampling sites, respectively.
+
+### Dataset overview
+
+Most of the columns in each data view (`results`, `locations`, and `activities`) contain only NAs. The abundance of NAs is a side-effect of making the EDD abstract-enough to accommodate any type of bio/geo/chemical data. For example, in `results`,  only `r cols_na[1,2]` of `r sum(cols_na$n)` have any non-NA values (Table 1).
+
+```{r, warning=FALSE}
+cols_na <- data.frame(col_name = colnames(EDD$Results),
+                      only_na = NA)
+for(i in 1:ncol(EDD$Results)){
+    cols_na$only_na[i] <- is.na(unique(EDD$Results[,i]))
+}
+cols_na <- cols_na %>% group_by(only_na) %>% summarize(n=n())
+
+cols_na %>%
+    gt() %>% 
+    tab_header(title="Table 1. Count of columns in `EDD$Results` with NA and non-NA values.") %>%
+    cols_label(only_na = "Columns contain only NA") %>%
+    summary_rows(columns = n, fns = list(Total="sum"), decimals=0)
+```
+
+#### __Data view `results`__
+
+Generally, one row in `results` is one unique combination of `Activity_ID` and `Method_Speciation`.
+
+```{r}
+nrow(EDD$Results)
+uniqueN(EDD$Results, by=c("Activity_ID", "Method_Speciation"))
+```
+One row in `results` is **not** a unique combination of `Activity_ID` and `Method_Speciation` when multiple measurements occurred from one activity-species combination, like if fishes were counted, and individual length and weight were measured for each of those fishes after a single electrofishing run (E.g., Table 2).
+
+```{r}
+summary_table <- EDD$Results %>%
+    subset(Characteristic_Name %in% c("Fish count by species", "Individual fish total length in mm", "Individual fish mass (weight) in g")) %>%
+    group_by(Activity_ID, Method_Speciation) %>% 
+    summarize(n=n()) %>%
+    ungroup() %>%
+    arrange(desc(n))
+    
+head(summary_table) %>%
+    gt() %>%
+    tab_header(title="Table 2. Examples of repeated activity-species combinations in `results`.") %>%
+    cols_align(align = c("left"))
+```
+
+Five columns from `results` will be especially important:   
+1. `Activity_ID`: The sampling event (e.g., an electrofishing run).  
+2. `Characteristic_Name`: The type of record (e.g., count of fishes from an electrofishing run).  
+3. `Method_Speciation`: The thing measured in a record (e.g., fish species).  
+4. `Result_Text`: The record's measurement (e.g., if a fish measured 55 mm TL, '55' would be its `Result_Text`).  
+5. `Result_Unit`: The record's unit of measure (e.g., if a fish measured 55 mm TL, 'mm' would be its `Result_Unit`).  
+
+The dataset contains five types of `results`. You will need to group and/or subset `results` by `EDD$Results$Characteristic_Name` for individual analyses.
+```{r}
+unique(EDD$Results$Characteristic_Name)
+```
+
+#### __Data view `activities`__
+
+`activities` are samples and are usually associated with many records in `results`. In `R`, you can join `activities` and `results` like this:
+```
+results.Activity_ID = activities.Activity_ID # equivalent fields
+demo_join <- dplyr::left_join(results, activities, by=c("Activity_ID")) # R dplyr example
+```
+One row in `activities` is one sample event.
+```{r}
+uniqueN(EDD$Activities, by=c("Activity_ID")) == nrow(EDD$Activities)
+```
+
+
+#### __Data view `locations`__
+`locations` are sampling sites and are usually associated with many records in `activities`. In `R`, you can join `activities` and `locations` like this:
+```
+activities.Location_ID = locations.Location_ID # equivalent fields
+demo_join <- dplyr::left_join(activities, locations, by=c("Location_ID")) # R dplyr example
+```
+
+One row in `locations` is one sample location.
+```{r}
+uniqueN(EDD$Locations, by=c("Location_ID")) == nrow(EDD$Locations)
+```
+
+
+
