--- a/ncrn_fish_dataset_companion_20230117.Rmd
+++ b/ncrn_fish_dataset_companion_20230117.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "NCRN Fish data companion"
-date: "17 Jan 2023"
+date: "`r format(Sys.Date(), '%b %d, %Y')`"
 output:
   html_document:
     df_print: paged
@@ -15,7 +15,7 @@ library(dplyr)
 
 ## Overview
 
-The file `ncrn_cumulative_fish_data_20230117.xlsx` is an Excel workbook (hereafter "workbook") containing the cumulative fish data (hereafter "dataset") collected by USNPS National Capital Region Network (NCRN). This markdown document explains the contents of the workbook, the data model used to arrange the dataset, and provides general guidelines for interpreting the dataset.
+The file `ncrn_bss_marc_dataset_20230125.xlsx` is an Excel workbook (hereafter "workbook") containing the cumulative fish data (hereafter "dataset") collected by USNPS National Capital Region Network (NCRN). This markdown document explains the contents of the workbook, the data model used to arrange the dataset, and provides general guidelines for interpreting the dataset.
 
 Data are presented in two views (`by_pass` and `individuals`) because NCRN only collected individual-level data (e.g., total length) for 'gamefish' (e.g., trout and bass species) pre-2019. Non-gamefishes data were aggregated to a count of `individuals` per electrofishing run, making it impossible to provide individual-level data for all legacy NCRN electrofishing surveys. **NOTE:** This limitation means that data provided in `individuals` is provided in `by_pass`, but the reverse is not always true.
 
@@ -48,7 +48,7 @@ library(kableExtra)
 #----- load project functions
 # source("scripts/buildEDD.R")
 # source("scripts/buildBioMonTools.R")
-source("scripts/buildMarcView.R")
+source("scripts/marc/buildMarcView.R")
 
 # Connect to db
 db <- ("C:/Users/cwainright/OneDrive - DOI/Documents - NPS-NCRN-Biological Stream Sampling/General/Annual-Data-Packages/2022/NCRN_MBSS/NCRN_MBSS_be_2022.mdb")# https://doimspp.sharepoint.com/:u:/r/sites/NCRNBiologicalStreamSampling/Shared%20Documents/General/Annual-Data-Packages/2022/NCRN_MBSS/NCRN_MBSS_be_2022.mdb?csf=1&web=1&e=jjeJIg
